--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
   "name": "qaniel/module-sales-sequence",
   "description": "Based on Boolfly Sales Sequence Module",
   "require": {
-    "php": "7.4.*",
-    "boolfly/module-base": "^1.0.0"
+    "php": "7.4.*"
   },
   "type": "magento2-module",
   "license": [
