--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "qaniel/module-sales-sequence",
   "description": "Based on Boolfly Sales Sequence Module",
   "require": {
-    "php": "7.4.*"
+    "php": ">=7.4"
   },
   "type": "magento2-module",
   "license": [
